[package]
name = "nonogrid"
description = "Efficient nonogram solver"
repository = "https://github.com/tsionyx/nonogrid"
version = "0.5.1"
authors = ["Ivan Ladelshchikov <tsionyx@gmail.com>"]
license = "MIT"
edition = "2018"


[profile.release]
lto = true
# get some speedup
codegen-units = 1
panic = 'abort'
# uncomment to use with profilers (or compile with `RUSTFLAGS='-g' cargo build`)
#debug = true


[dependencies]
hashbrown = "0.1"
lru = "0.1"
priority-queue = "0.6"
ordered-float = "1.0"
log = "0.4"
smallvec = "0.6"

toml = {version="0.5", optional=true}
serde_derive = {version="1.0", optional=true}
serde = {version="1.0", optional=true}

sxd-document = {version="0.3", optional=true}
sxd-xpath = {version="0.4", optional=true}

clap = {version="2.33", optional=true}
colored = {version="1.8", optional=true}
env_logger = {version="0.6", optional=true}
reqwest = {version="0.9", optional=true}


[features]
std_time = []
xml = ["sxd-document", "sxd-xpath"]
ini = ["toml", "serde", "serde_derive"]
default = ["clap", "std_time", "env_logger", "ini"]
web = ["reqwest"]
# slower, but allows to use with concurrency
threaded = []
