[package]
name = "nonogrid"
description = "Efficient nonogram solver"
repository = "https://github.com/tsionyx/nonogrid"
version = "0.6.2"
authors = ["Ivan Ladelshchikov <tsionyx@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
keywords = ["nonogram", "solver", "sat"]
categories = ["algorithms", "command-line-utilities", "games", "science", "visualization"]


[profile.release]
lto = true
# get some speedup
codegen-units = 1
panic = 'abort'
# uncomment to use with profilers (or compile with `RUSTFLAGS='-g' cargo build`)
#debug = true


[dependencies]
hashbrown = "0.6"
lru = "0.4"
priority-queue = "0.7"
ordered-float = "1.0"
log = "0.4"
smallvec = "1.2"


clap = {version="2.33", optional=true}

env_logger = {version="0.7", optional=true}

toml = {version="0.5", optional=true}
serde_derive = {version="1.0", optional=true}
serde = {version="1.0", optional=true}

sxd-document = {version="0.3", optional=true}
sxd-xpath = {version="0.4", optional=true}

colored = {version="1.9", optional=true}

reqwest = {version="0.10", optional=true, features=["blocking"]}

varisat = {version="0.2", optional=true}


[features]
args = ["clap"]
std_time = []
logger = ["env_logger"]
ini = ["toml", "serde", "serde_derive"]

sat = ["varisat"]
xml = ["sxd-document", "sxd-xpath"]
colors = ["colored"]
web = ["reqwest"]
# slower, but allows to use with concurrency
threaded = []

default = ["args", "std_time", "logger", "ini"]
