[package]
name = "nonogrid"
description = "Efficient nonogram solver"
repository = "https://github.com/tsionyx/nonogrid"
version = "0.7.0"
authors = ["Ivan Ladelshchikov <tsionyx@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
keywords = ["nonogram", "solver", "sat"]
categories = ["algorithms", "command-line-utilities", "games", "science", "visualization"]


[profile.release]
lto = true
# get some speedup
codegen-units = 1
panic = 'abort'
# uncomment to use with profilers (or compile with `RUSTFLAGS='-g' cargo build`)
#debug = true


[dependencies]
hashbrown = "0.6"
lru = "0.5"
priority-queue = "1.0"
ordered-float = "2.0"
log = "0.4"
smallvec = "1.4"


clap = {version="2.33", optional=true}

env_logger = {version="0.7", optional=true, default_features=false, features=["termcolor", "atty", "humantime"]}

toml = {version="0.5", optional=true}
serde = {version="1.0", optional=true, features=["derive"]}

sxd-document = {version="0.3", optional=true}
sxd-xpath = {version="0.4", optional=true}

colored = {version="1.9", optional=true}

reqwest = {version="0.10", optional=true, features=["blocking"]}

varisat = {version="0.2", optional=true}


[features]
args = ["clap"]
std_time = []
logger = ["env_logger"]
ini = ["toml", "serde"]

sat = ["varisat"]
xml = ["sxd-document", "sxd-xpath"]
colors = ["colored"]
web = ["reqwest"]
# slower, but allows to use with concurrency
threaded = []

default = ["args", "std_time", "logger", "ini"]
